Recipe list, user upload, delete, modify

--- a/components/Layout/Nav.module.css
+++ b/components/Layout/Nav.module.css
@@ -31,6 +31,13 @@
   text-decoration: none;
 }
 
+.logo1 {
+  font-weight: 800;
+  color: var(--foreground);
+  text-decoration: none;
+  margin-left: 80px;
+}
+
 .user {
   position: relative;
 }
