--- a/components/Post/Post.module.css
+++ b/components/Post/Post.module.css
@@ -13,6 +13,7 @@
 }
 
 .creator {
+  margin-top: 3rem;
   display: inline-flex;
 }
 
@@ -26,23 +27,53 @@
 }
 
 .name {
-  font-size: 0.875rem;
+  font-size: 1.5rem;
   font-weight: 600;
   color: var(--foreground);
   margin: 0;
   line-height: 20px;
 }
 
-.username {
-  font-size: 0.875rem;
+.bigName {
+  font-size: 3rem;
+  font-weight: 600;
+  color: var(--foreground);
+  margin: 0;
+  line-height: 20px;
+}
+
+.category {
+  font-size: 1rem;
   font-weight: 400;
   color: var(--secondary);
   margin: 0;
   line-height: 20px;
 }
 
+.username {
+  font-size: 1rem;
+  font-weight: 400;
+  color: var(--secondary);
+  margin: 0;
+  line-height: 20px;
+}
+
+.Wrap {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .wrap {
   margin-top: 16px;
+}
+
+.wrap2 {
+  display: block;
+  margin-bottom: 21px;
+  text-decoration: none;
 }
 
 .content {
@@ -55,10 +86,56 @@
   -webkit-box-orient: vertical;
 }
 
+.bigContent {
+  color: var(--accents-6);
+  font-weight: 500;
+  font-size: 1.5rem;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
 .timestamp {
   font-size: 0.875rem;
   font-weight: 400;
   line-height: 1.25rem;
   margin: 0;
   color: var(--accents-5);
+}
+
+.buttonGroup {
+  display: flex;
+  gap: 10px;
+}
+
+.recipeImg {
+  position: relative;
+  width: 96px;
+  height: 96px;
+  transition: ease 0.2s opacity;
+}
+
+.recipeImg:hover {
+  opacity: 0.5;
+}
+
+.recipeImg input {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  z-index: 1;
+  cursor: pointer;
+}
+
+.label {
+  display: block;
+  font-size: 0.75rem;
+  font-weight: 500;
+  color: var(--secondary);
+  text-transform: uppercase;
+  margin-bottom: 8px;
+  max-width: 100%;
 }
