--- a/page-components/Recipe/PostList.module.css
+++ b/page-components/Recipe/PostList.module.css
@@ -31,3 +31,72 @@
   border-radius: 4px;
   border: 1px solid #ccc;
 }
+
+.randomMenu {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #f4f4f4f4;
+  padding: 2rem;
+  border-radius: 4px;
+  width: 80%;
+  max-width: 400px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+}
+
+.menuItem {
+  display: block;
+  margin-bottom: 1rem;
+  color: rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+.menuItem:hover {
+  text-decoration: underline;
+}
+
+.filterAndButtonContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.Wrap {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.input {
+  width: 100%;
+  min-width: 0;
+  display: inline-flex;
+  border: 1px solid var(--accents-2);
+  border-radius: 5px;
+  padding: 0px 12px;
+  background: var(--background);
+  color: var(--foreground);
+  height: 40px;
+  transition: border-color 0.15s ease;
+  outline: 0;
+}
