add bookmark function

--- a/components/Post/Post.module.css
+++ b/components/Post/Post.module.css
@@ -139,3 +139,22 @@
   margin-bottom: 8px;
   max-width: 100%;
 }
+
+.iconButton {
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+}
+
+.iconButton:hover {
+  cursor: pointer;
+}
+
+.iconButton:focus {
+  outline: none;
+}
+
+.iconButton svg {
+  color: rgb(231, 231, 27);
+}
