--- a/page-components/Recipe/Poster.module.css
+++ b/page-components/Recipe/Poster.module.css
@@ -28,10 +28,67 @@
   right: 0;
 }
 
+.endbutton2 {
+  position: absolute;
+  right: 10%;
+}
+
 .heading {
   font-size: 0.85rem;
   letter-spacing: 0.2rem;
   margin-top: 0;
   padding-left: 0.2rem;
   color: var(--accents-7);
+}
+
+.modal {
+  background: #f8f8f8;
+  border-radius: 6px;
+  max-width: 500px;
+  padding: 30px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.overlay {
+  background: rgba(0, 0, 0, 0.6);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.bookmarksList {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.bookmark {
+  padding: 12px 0;
+  font-size: 18px;
+  color: #333;
+  text-decoration: none;
+  display: block;
+  transition: color 0.3s ease;
+}
+
+.bookmark:hover {
+  color: #0070f3;
+}
+
+.bookmark:last-child {
+  border-bottom: none;
+}
+
+.linkAndButton {
+  border-bottom: 2px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
